@@ -1,3 +1,11 @@
+2007-07-23  Stefan Kost  <ensonic@users.sf.net>
+
+	Patch by: Yeti <yeti@physics.muni.cz>
+
+	* gtk-doc.make:
+	* gtkdoc-mkdb.in:
+	  Report undeclared symbols into a file. Fixes #436565.
+
 2007-07-18  Stefan Kost  <ensonic@users.sf.net>
 
 	* gtkdoc-mkdb.in:
